prevent main informations span to wrap on detail page

--- a/app/styles/_trek-detail.scss
+++ b/app/styles/_trek-detail.scss
@@ -228,6 +228,9 @@ img.rules-picture {
   			color: inherit;
   			font-size: 2rem;
   		}
+        span {
+            white-space: nowrap;
+        }
 	}
 }
 
